finish css and some changes in html

--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>toms_profile</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="hero">
+    <div id="hero">
       <div class="left">
         <img src="./talking_tom-removebg-preview.png" alt="profile" />
       </div>
       <div class="right">
-        <h2><span>Welcome</span>to my world.</h2>
+        <h2><span>Welcome</span> to my world.</h2>
         <h4>Hi, I'm <span>Tommas</span></h4>
         <p>
-          Hey, guys. Talking Tom, here. I guess I need no introduction but if
-          there are any uninitiated dudes out there, I'm the cool, good-looking
-          one in the middle! Basically, the top cat. Enough said!
+        Hey, guys. Talking Tom, here. I guess I need no introduction <br>
+        but if there are any uninitiated dudes out there, I'm the cool, <br> 
+        good-looking one in the middle! Basically, the top cat. Enough said!
         </p>
         <button>Explore</button>
       </div>
