responsive the content for max 620px and min 370px

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <h2><span>Welcome</span> to my world.</h2>
         <h4>Hi, I'm <span>Tommas</span></h4>
         <p>
-        Hey, guys. Talking Tom, here. I guess I need no introduction <br>
-        but if there are any uninitiated dudes out there, I'm the cool, <br> 
+        Hey, guys. Talking Tom, here. I guess I need no introduction 
+        but if there are any uninitiated dudes out there, I'm the cool,
         good-looking one in the middle! Basically, the top cat. Enough said!
         </p>
         <button>Explore</button>
